fix navbar width on small screen

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -80,6 +80,11 @@ pre code {
 }
 
 @media (max-width: 700px) {
+  .logo {
+    /* margin-right: 5px; */
+    max-width: auto;
+    max-height: auto;
+  }
   .toggle-button {
     display: flex;
   }
@@ -88,6 +93,8 @@ pre code {
     display: none;
   }
   nav {
+    max-width: 95%;
+    margin: 0 auto;
     flex-direction: column;
     align-items: flex-start;
   }
